Started implementing data structure.

--- a/CasperWP/CasperWP.csproj
+++ b/CasperWP/CasperWP.csproj
@@ -108,6 +108,7 @@
     <Compile Include="Video.xaml.cs">
       <DependentUpon>Video.xaml</DependentUpon>
     </Compile>
+    <Compile Include="VideoFrame.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
